# weather-station

./: .gitignore  .gitmodules  .mxproject  CMakeCache.txt  CMakeLists.txt  README.md  nucleo-epaper-display.ioc  weather-station.ioc
Core/Inc/: bat_nimh_calc.h  bmpxx80.h  epd3in7.h  epd3in7_driver.h  epd3in7_lvgl_adapter.h  epd3in7_panel.h  epd3v7.h  epd_3in7.h  epdmgr.h  hasto_logo.h  main.h  renderer.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Inc/app/: app.h  battery.h  display.h  display_data.h  hourly_clock.h  radio.h  sensor.h  station_data.h
Core/Src/: bat_nimh_calc.c  bmpxx80.c  epd3in7.c  epd3in7_driver.c  epd3in7_lvgl_adapter.c  epd3in7_panel.c  epd3v7.c  epd_3in7.c  gpio.c  hourly_clock.c  lv_font_opensans_bold_numbers_72.c  lv_font_opensans_regular_16.c  lv_font_opensans_regular_24.c  main.c  renderer.c  spi.c  stm32g4xx_it.c  tim.c
Core/Src/app/: app.c  bat_nimh_calc.c  battery.c  display.c  hourly_clock.c  renderer.c  sensor.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
src/shared/: CMakeLists.txt
src/shared/inc/shared/: hourly_clock.h  sensor.h
src/shared/inc/shared/drivers/: bme280_async.h  bmpxx80.h  rfm69.h  rfm69_registers.h  spi_bus_manager.h
src/shared/src/: shared_test.c
src/shared/src/shared/drivers/: bmpxx80.c  rfm69.c  spi_bus_manager.c
src/station/: .mxproject  CMakeCache.txt  CMakeLists.txt  station.code-workspace  station.ioc
src/station/cmake/: gcc-arm-none-eabi.cmake
src/transmitter/: .gitignore  .mxproject  CMakeLists.txt  STM32L010XX_FLASH.ld  transmitter.code-workspace  transmitter.ioc
(+84 files in other folders)
